# jitterphysics2cpp

./: .gitignore  CMakeLists.txt  README.md  deviations.md  vcpkg.json
.github/workflows/: jitter-cpp.yml
Benchmarks/: README.md
Benchmarks/CSharp/: JitterBenchmark.CSharp.csproj  Program.cs
Benchmarks/Cpp/: CMakeLists.txt
Benchmarks/Cpp/src/: ColosseumBenchmark.cpp
Jitter2/: CMakeLists.txt
Jitter2/include/Jitter2/: ArgumentCheck.hpp  DebugCheck.hpp  IDebugDrawer.hpp  Jitter2.hpp  Logger.hpp  Precision.hpp  Tracer.hpp
Jitter2/include/Jitter2/Collision/: CollisionIsland.hpp  IslandHelper.hpp
Jitter2/include/Jitter2/Collision/CollisionFilter/: IBroadPhaseFilter.hpp  INarrowPhaseFilter.hpp  TriangleEdgeCollisionFilter.hpp
Jitter2/include/Jitter2/Collision/DynamicTree/: DynamicTree.hpp  IDynamicTreeProxy.hpp
Jitter2/include/Jitter2/Collision/NarrowPhase/: CollisionManifold.hpp  ConvexPolytope.hpp  MinkowskiDifference.hpp  NarrowPhase.hpp  SimplexSolver.hpp  SimplexSolverAB.hpp  SupportPrimitives.hpp
Jitter2/include/Jitter2/Collision/Shapes/: BoxShape.hpp  CapsuleShape.hpp  ConeShape.hpp  ConvexHullShape.hpp  CylinderShape.hpp  ICloneableShape.hpp  PointCloudShape.hpp  Shape.hpp  ShapeHelper.hpp  SphereShape.hpp  TransformedShape.hpp  TriangleMesh.hpp  TriangleShape.hpp  VertexSupportMap.hpp
Jitter2/include/Jitter2/DataStructures/: PartitionedSet.hpp  ShardedDictionary.hpp  SlimBag.hpp
Jitter2/include/Jitter2/Dynamics/: Arbiter.hpp  ArbiterKey.hpp  Contact.hpp  RigidBody.hpp  World.hpp
Jitter2/include/Jitter2/Dynamics/Constraints/: AngularMotor.hpp  BallSocket.hpp  ConeLimit.hpp  Constraint.hpp  ConstraintUtility.hpp  DistanceLimit.hpp  FixedAngle.hpp  HingeAngle.hpp  Limit.hpp  LinearMotor.hpp  PointOnLine.hpp  PointOnPlane.hpp  TwistAngle.hpp
Jitter2/include/Jitter2/Dynamics/Joints/: HingeJoint.hpp  Joint.hpp  PrismaticJoint.hpp  UniversalJoint.hpp  WeldJoint.hpp
Jitter2/include/Jitter2/LinearMath/: JAngle.hpp  JBoundingBox.hpp  JMatrix.hpp  JQuaternion.hpp  JTriangle.hpp  JVector.hpp  MathHelper.hpp  StableMath.hpp
Jitter2/include/Jitter2/Parallelization/: Parallel.hpp  ReaderWriterLock.hpp  ThreadPool.hpp
Jitter2/include/Jitter2/SoftBodies/: BroadPhaseCollisionFilter.hpp  DynamicTreeCollisionFilter.hpp  SoftBody.hpp  SoftBodyShape.hpp  SoftBodyTetrahedron.hpp  SoftBodyTriangle.hpp  SpringConstraint.hpp
Jitter2/include/Jitter2/Unmanaged/: PartitionedBuffer.hpp
Jitter2/src/: World.cpp
Jitter2/src/Parallelization/: ThreadPool.cpp
JitterDemo/: CMakeLists.txt
JitterDemo/src/: Playground.Gui.hpp  Playground.hpp  Program.cpp
JitterDemo/src/Core/: Types.hpp
JitterDemo/src/Demos/: Common.hpp  CommonScene.hpp  Demo00.hpp  Demo01.hpp  Demo02.hpp  Demo03.hpp  Demo04.hpp  Demo05.hpp  Demo06.Types.hpp  Demo06.hpp  Demo07.hpp  Demo08.hpp  Demo09.hpp  Demo10.hpp  Demo11.hpp  Demo12.hpp  Demo13.hpp  Demo14.hpp  Demo15.hpp  Demo16.hpp  Demo17.hpp  Demo18.hpp  Demo19.hpp  Demo20.hpp  Demo21.Types.hpp  Demo21.hpp  Demo22.hpp  Demo23.hpp  Demo24.hpp  Demo25.Types.hpp  Demo25.hpp  Demo26.hpp  Demo27.hpp  Demo28.hpp  Demo29.hpp  Demo30.hpp  Demo31.Types.hpp  Demo31.hpp  DemoJenga.hpp  DemoShowcase.hpp  (+1 more)
JitterDemo/src/Demos/Car/: ConstraintCar.hpp  RayCastCar.hpp  Wheel.hpp
JitterDemo/src/Demos/Misc/: CcdSolver.hpp  Dust.hpp  GearCoupling.hpp  Octree.hpp  Player.hpp
JitterDemo/src/Renderer/: Conversion.hpp  DebugRenderer.hpp  Drawables.hpp  LitShader.hpp  ShadowCaster.hpp  Skybox.hpp  TextureOverlay.hpp
JitterDemo/src/Renderer/Assets/: Mesh.hpp  Primitives.hpp
JitterDemo/src/Renderer/OpenGL/: GLResources.hpp
JitterTests/: CMakeLists.txt
JitterTests/src/: BroadPhaseTests.cpp  DebugDrawTests.cpp  DiagnosticTests.cpp  FallbackMain.cpp  MathTests.cpp  NarrowPhaseTests.cpp  ParallelizationTests.cpp  RigidBodyTests.cpp  ShapeTests.cpp  SoftBodyTests.cpp  StorageTests.cpp  TestSupport.hpp
